# CMakeLists for toolsa library

cmake_minimum_required (VERSION 3.12)
project (LROSE-CORE)

add_library (toolsa 
Path/cpath.c
ansi/ansi.c
compress/bzip_compress.c
compress/gzip_compress.c
compress/lzo_compress.c
compress/minilzo.c
compress/rle_compress.c
compress/ta_compress.c
compress/ta_crc32.c
compress/test_bzip.c
compress/test_gzip.c
compress/test_lzo.c
compress/test_rle.c
compress/test_zlib.c
compress/zlib_compress.c
compress/zlib_example.c
db_access/db_access.c
dlm/TEST_toolsa_dlm.c
dlm/dlm.c
err/TEST_toolsa_err.c
err/eprintf.c
err/err.c
file_io/file_io.c
file_io/file_io_jaws.c
file_io/filecopy.c
file_io/makedir.c
file_io/makedir_jaws.c
fmq/fmq.c
fmq/fmq_alloc.c
fmq/fmq_check.c
fmq/fmq_error.c
fmq/fmq_file.c
fmq/fmq_handle.c
fmq/fmq_print.c
fmq/fmq_read.c
fmq/fmq_search.c
fmq/fmq_stat.c
fmq/fmq_swap.c
fmq/fmq_write.c
font/font.c
http/HTTPgetURL.c
http/HTTPgetURL_via_proxy.c
ldata/ldata_info.c
mb/mb.c
mb/mbq.c
mb/rtest.c
mb/stat_mb.c
mb/wtest.c
mem/TEST_toolsa_mem.c
mem/blockbuf.c
mem/mem.c
mem/mem_buf.c
mem/umalloc.c
pjg/TEST_toolsa_pjg.c
pjg/pjg.c
pjg/pjg_art.c
pjg/pjg_cylind.c
pjg/pjg_flat.c
pjg/pjg_grid.c
pjg/pjg_lc2.c
pjg/pjg_ll.c
pjg/pjg_mdv.c
pjg/pjg_ps.c
pjg/pjg_pse.c
pjg/pjg_tm.c
pjg/pjg_util.c
pjg/sincos.c
pjg/test_rand.c
pmu/pmu.c
pmu/pmu_f.c
port/port_alphasort.c
port/port_hostname.c
port/port_scandir.c
port/port_signal.c
reutil/reutil.c
smu/TEST_toolsa_smu.c
smu/smu.c
smu/smu_auto.c
smu/smu_last_data.c
sockutil/Testc.c
sockutil/Testc2.c
sockutil/Tests.c
sockutil/sku_named.c
sockutil/sock_util.c
sok2/TEST_toolsa_sok2.c
sok2/Testc.c
sok2/Tests.c
sok2/Tests.sav.c
sok2/dump_sock.c
sok2/send_sock.c
sok2/sok2.c
str/TEST_toolsa_str.c
str/str_binary.c
str/str_blnk.c
str/str_bpad.c
str/str_concat.c
str/str_copy.c
str/str_delete.c
str/str_dup.c
str/str_equal.c
str/str_free.c
str/str_good.c
str/str_insert.c
str/str_mcopy.c
str/str_ncopy.c
str/str_parse.c
str/str_parse_delim.c
str/str_parse_double.c
str/str_pastoc.c
str/str_pos.c
str/str_remove.c
str/str_replace.c
str/str_swap.c
str/str_tokn.c
ttape/remote_tape.c
ttape/tape_utils.c
umisc/fsleep.c
umisc/safe_system.c
umisc/safe_system_f.c
umisc/test_umsg_recv.c
umisc/test_umsg_send.c
umisc/ucopyright.c
umisc/udaemonize.c
umisc/ufread.c
umisc/ufree_parsed_path.c
umisc/ufwrite.c
umisc/uparams_etc.c
umisc/uparse_path.c
umisc/ushmem.c
umisc/ustring.c
umisc/usystem_call.c
umisc/uusleep.c
utim/testutim.c
utim/tu_sleep.c
utim/udatetime.c
utim/utim.c
utim/uvalid_datetime.c
xdru/xdru.c
)

include_directories (./include $ENV{LROSE_INSTALL_DIR}/include)

INSTALL(FILES libtoolsa.a
        DESTINATION $ENV{LROSE_INSTALL_DIR}/lib
	)

